--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 Welcome to your neural health guide.<br>
                 Complete the daily quizzes to unlock your final prize.
             </p>
-            <button class="primary-btn" onclick="startApp()">Começar Semana</button>
-            <button class="secondary-btn" onclick="renderFuelingScreen()">Guia de Nutrição (Fueling)</button>
+            <button class="primary-btn" onclick="startApp()">Start Week</button>
         </section>
     </main>
 
